# figure-tracker

./: .gitignore  Cargo.toml  LICENSE  README.md  default.yaml
.github/workflows/: build.yml
src/: cli.rs  configuration.rs  main.rs
src/conditions/: mod.rs
src/currency/: conversion.rs  guesser.rs  mod.rs
src/database/: conditions.rs  items.rs  migrations.rs  mod.rs  prices.rs
src/http/: mod.rs
src/modules/: mod.rs
src/modules/amazon/: base.rs  mod.rs
src/modules/amiami/: base.rs  info.rs  mod.rs
src/modules/myfigurecollection/: base.rs  info.rs  mod.rs
src/modules/rakuten/: base.rs  mod.rs
src/modules/solarisjapan/: base.rs  mod.rs
src/notifications/: mod.rs
src/notifications/discord/: mod.rs
src/notifications/telegram/: mod.rs
