[package]
name = "figure-tracker"
version = "0.1.0"
authors = ["DaRealFreak <steffen.keuper@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rusqlite]
version = "0.21.0"
features = ["bundled"]

[dependencies.clap]
git = "https://github.com/clap-rs/clap"
version = "3.0.0-beta.1"
features = ["yaml"]

[dependencies.reqwest]
version = "0.10.1"
features = ["json"]

[dependencies.tokio]
version = "0.2.11"
features = ["full"]

[dependencies]
html5ever = "0.25.1"
log = "0.4.8"
env_logger = "0.7.1"
chrono = "0.4.10"
yaml-rust = "0.4.3"