[package]
name = "figure-tracker"
version = "0.1.0"
authors = ["DaRealFreak <steffen.keuper@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rusqlite]
version = "0.21.0"
features = ["bundled", "chrono"]

[dependencies.clap]
git = "https://github.com/clap-rs/clap"
version = "3.0.0-beta.1"
features = ["yaml"]

[dependencies.reqwest]
version = "0.10.3"
features = ["blocking", "gzip", "json"]

[dependencies.serde]
version = "1.0.104"
features = ["derive"]

[dependencies.quick-xml]
version = "0.17.2"
features = ["serialize"]

[dependencies.num-traits]
version = "0.2.11"
features = ["i128"]

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
chrono = "0.4.10"
yaml-rust = "0.4.3"
regex = "1.3.4"
serde_json = "1.0.48"
strsim = "0.10.0"
ordered-float = "1.0.2"
threadpool = "1.7.1"
currency = "0.4.0"
kuchiki = "0.8.0"